# hrrr_sraper

./: .gitignore  MANIFEST.in  README.md  _version.py  pyproject.toml  setup.py
examples/: HRRR.ipynb  HRRRv4.ipynb  Untitled.ipynb  aws.ipynb  rap_chem.ipynb  scrape_hrrr_2.1.ipynb
examples/operationalize/: development.ipynb  example.ini  hrrr_2d_grb_info.csv  hrrr_2d_grb_info.xlsx  hrrr_2d_grb_info_matched.xlsx  hrrr_3d_grb_info.csv  hrrr_3d_grb_info.xlsx  ncep_hrrr_2d.header.txt  ncep_hrrr_3d.header.txt  ncep_rap_3d.header.txt  params.csv  readme.md  variable_mapping.ipynb
examples/operationalize/output/: test_20211201_06_00.nc
hrrr_scraper/: aws.py  deprecated_grid2site.py  deprecated_scrapelab.py  deprecated_scrapelab_nat.py  extraction_configuration.py  grid2site.py  hrrr_lab.py  scrapelab.py
hrrr_scraper/extra/: __init__.py  example.ini
hrrr_scraper/scripts/: __init__.py  deprecated_scrape_hrrr_conus_nat1  modelextractor  scrape_hrrr.py  scrape_hrrr_2_1.py  scrape_hrrr_splash4ula.py
scripts/: deprecated_scrape_hrrr_smoke  hrrr_smoke2gml  modelextractor  scrape_hrrr
